# risklens-platform

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN.md  DAY1_SUMMARY.md  Dockerfile  PR_CI_PIPELINE.md  PR_CLI_STARTUP_FIX.md  PR_DATABASE_LAYER.md  PR_DESCRIPTION.md  PR_DOCKER_DEPLOYMENT.md  PR_FASTAPI_SERVICE.md  PR_KAFKA_INTEGRATION.md  PR_PHASE1_CORE.md  PR_RULES_MANAGEMENT_API.md  PR_STREAMLIT_DASHBOARD.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8f3b2b9c1d4e_add_triage_fields_to_decisions.py  b2f55e300e27_initial_schema_with_decisions_table.py
analysis/: README.md  impact_analysis.ipynb  incident_report.md
analysis/data/: sample_week2_alerts.jsonl
analysis/output/: decisions.csv  impact_summary.json  impact_summary.md  incident_report_draft.md
dashboard/: app.py
docs/archive/: ROADMAP.md
docs/runbooks/: slack_alerts.md
examples/: example_alert.json  wash_trading_alert.json
observability/grafana/dashboards/: risklens.json
observability/prometheus/: prometheus.yml
scripts/: demo.sh  demo_stop.sh  local_smoke.sh  local_smoke_stop.sh  seed_demo.py  week2_impact_analysis.py
src/risklens/: __init__.py  cli.py  config.py
src/risklens/analysis/: __init__.py  impact.py
src/risklens/api/: __init__.py  main.py
src/risklens/db/: __init__.py  models.py  session.py
src/risklens/engine/: __init__.py  decision.py  rule_store.py  rules.py  scoring.py
tests/: test_api.py  test_cli.py  test_db.py  test_decision.py  test_impact_analysis.py  test_metrics.py  test_rules.py  test_rules_api.py  test_scoring.py  test_streaming.py
(+6 files in other folders)
