[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risklens"
version = "0.1.0"
description = "Production-grade risk control platform for Web3"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Rhea Wang", email = "qinw.official@gmail.com"}
]
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  "redis>=5.0.1",
  "kafka-python>=2.0.2",
  "prometheus-client>=0.19.0",
  "structlog>=24.1.0",
  "typer>=0.9.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.14",
  "mypy>=1.8.0",
  "black>=24.1.0",
  "httpx>=0.26.0",  # for testing
]

[project.scripts]
risklens = "risklens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["risklens*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
addopts = "-v --cov=risklens --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py311']
